# signrs

./: Cargo.toml  README.md
examples/app1/: date.js  main.js  main.rhai  text.json  util.rhai
examples/app2/: clock.js  event_slide.js  fps.js  guide.js  main.js  main.rhai  slide_manager.js  slide_manager.rhai  text_slide.js  ticker.js  ticker.json
examples/app2/data/: debug.json  guide.json  slides.json
examples/app3/: fps.js  main.js
examples/display1/: main.rhai  text.json
frontend/: README.md  package-lock.json  package.json
frontend/app/: index.html  router.js
frontend/app/components/: file-tree-item.hbs  file-tree-item.js  file-tree.hbs  file-tree.js  sign-status.hbs  sign-status.js  source-editor.hbs  source-editor.js
frontend/app/controllers/: editor.js  index.js
frontend/app/modifiers/: load-codemirror.js  scroll-top.js
frontend/app/routes/: editor.js  index.js
frontend/app/services/: sign-server.js
frontend/app/styles/: app.scss
frontend/app/templates/: application.hbs  editor.hbs  index.hbs
frontend/config/: environment.js
frontend/tests/: index.html  test-helper.js
frontend/tests/integration/components/: file-tree-item-test.js  file-tree-test.js  sign-status-test.js  source-editor-test.js
frontend/tests/integration/modifiers/: load-codemirror-test.js
frontend/tests/unit/controllers/: editor-test.js  index-test.js
frontend/tests/unit/routes/: editor-test.js  index-test.js
frontend/tests/unit/services/: sign-server-test.js
src/: iter_util.rs  js_draw.rs  js_env.rs  main.rs  perf.rs  rhai_modules.rs  script_env.rs  server.rs  window_handler.rs
src/js_env/: files.rs  graphics.rs  mod.rs
