[package]
name = "signrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speedy2d = {git = "https://github.com/superlou/Speedy2D.git"}
boa_engine = {git = "https://github.com/boa-dev/boa.git"}
boa_gc = {git = "https://github.com/boa-dev/boa.git"}
boa_runtime = {git = "https://github.com/boa-dev/boa.git"}
notify = "5.1.0"
thiserror = "1.0"
chrono = "0.4"
rouille = "3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3.3"
