[package]
name = "signrs"
version = "0.1.0"
edition = "2021"

[dependencies]
boa_engine = {git = "https://github.com/boa-dev/boa.git"}
boa_gc = {git = "https://github.com/boa-dev/boa.git"}
boa_runtime = {git = "https://github.com/boa-dev/boa.git"}
chrono = "0.4"
hostname = "0.3"
local-ip-address = "0.5"
notify = "5.1.0"
pico-args = "0.5"
rouille = "3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
speedy2d = {git = "https://github.com/superlou/Speedy2D.git"}
thiserror = "1.0"
walkdir = "2.3.3"
